# develop-server

./: .gitignore  install  install.sh  remove  run.sh
develop-helper-bot/: .env.tempalte  README.md  pyproject.toml
develop-helper-bot/bot/: __main__.py
develop-helper-bot/bot/config/: config_loader.py
develop-helper-bot/bot/services/: server.py  utils.py
server/: .env.tempalte  pyproject.toml
server/src/: __main__.py
server/src/api/: control.py
server/src/config/: config_loader.py
server/src/services/: ngrok.py  utils.py
