[tool.poetry]
name = "ngrok_ssh"
version = "0.1.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
ngrok = "^0.12.0"
fastapi = "^0.104.0"
envparse = "^0.2.0"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
